<resources>
    <string name="app_name">RairiWala</string>
    <string name="enterusername">Enter Name</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enterpin">Enter Pin</string>
    <string name="registeruser">Register</string>
    <string name="login">Login</string>
    <string name="title_activity_seller_home_page">SellerHomePage</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_customer_home_page">CustomerHomePage</string>
    <string name="logout">Logout</string>
    <string name="title_activity_add_seller_extra_information">Map</string>
    <string name="title_activity_seller_add_product">SellerAddProduct</string>
    <string name="title_activity_nearest_vendor">NearestVendor</string>
    <string name="title_activity_product_list">ProductList</string>
    <string name="title_activity_order_items">OrderItems</string>
    <string name="delete">delete</string>
    <string name="title_activity_order">Order</string>
    <string name="title_activity_place_order">Map</string>
    <string name="title_activity_order_details">OrderDetails</string>
    <string name="title_activity_seller_new_order_list">SellerNewOrderList</string>
    <string name="title_activity_seller__add__deliver__persons">Seller_Add_Deliver_Persons</string>
    <string name="title_activity_delivery_person_home_page">DeliveryPersonHomePage</string>
    <string name="name">Name :</string>
    <string name="title_activity_customer_order_list">CustomerOrderList</string>
    <string name="title_activity_assign_delivery_person">AssignDeliveryPerson</string>
    <string name="title_activity_seller_assign_deliver_person">SellerAssignDeliverPerson</string>
    <string name="title_activity_order_detail_google_map">Map</string>
    <string name="title_home">home</string>
    <string name="title_dashboard">home</string>
    <string name="title_notifications">notification</string>
    <string name="title_activity_rating__stars_">Rating_Stars_Activity</string>
    <string name="bc_CONNECTED">hello</string>
    <string name="title_activity_vendor_review_list">VendorReviewList</string>
    <string name="title_activity_seller_edit_product">SellerEditProduct</string>
    <string name="title_activity_customer_buying_history">CustomerBuyingHistory</string>
    <string name="title_activity_vendor_selling_history">VendorSellingHistory</string>
    <string name="title_activity_nearest_vendors_map">Map</string>
    <string name="ResponseTime">ResponseTime</string>
    <string name="title_activity_account_detail">AccountDetail</string>
    <string name="report_customer">Report Customer</string>
    <string name="forget_password">Forget Password?</string>
    <string name="title_activity_password_recovery">PasswordRecovery</string>
    <string name="title_activity_update_password">UpdatePassword</string>
    <string name="title_activity_nearst_vendors_before_registration">
        NearstVendorsBeforeRegistration
    </string>
</resources>
