<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home"
    tools:context="com.example.altaf.rairiwala.AccountManagment.UserRegister">

    <ImageView
        android:id="@+id/userprofile"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:src="@drawable/user" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userprofile"
        android:layout_margin="20dp"
        android:layout_marginTop="5dp"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/sign_up_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/name"
                android:ems="10"
                android:hint="@string/enterusername"
                android:inputType="textPersonName"
                android:textColorHint="@color/red" />

            <EditText
                android:id="@+id/sign_up_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/phone"
                android:ems="10"
                android:hint="3400456762"
                android:inputType="number"
                android:textColorHint="@color/red" />

            <EditText
                android:id="@+id/sign_up_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/password"
                android:ems="10"
                android:hint="@string/enterpin"
                android:inputType="numberPassword"
                android:textColorHint="@color/red" />

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/rounded_widgets"
                android:fontFamily="sans-serif"
                android:text="@string/registeruser"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/already_account_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="Already Have Account?"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20dp" />
        </LinearLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>
